[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Darius Trabalza <dariustrabalza@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.11.2"
webdriver-manager = "^3.8.6"
requests = "^2.31.0"
openai = "^0.28.1"



[tool.poetry.group.testing.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
