[tool.poetry]
name = "chess_content_maker"
version = "0.1.0"
description = ""
authors = ["Darius Trabalza <dariustrabalza@hotmail.co.uk>"]
readme = "README.md"
packages = [{ include = "src/chess_content_maker" }]


[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.11.2"
webdriver-manager = "^3.8.6"
requests = "^2.31.0"


[tool.poetry.group.testing.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
isort = "^5.13.2"
black = "^24.10.0"
mypy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#configurations for tools
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true


[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = true


[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true
strict = true
